<resources>
    <string name="app_name">SMASH TOPO</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- PANTALLA SPLASH-->
    <string name="titulo_splash_1">SMASH</string>
    <string name="titulo_splash_2">TOPO</string>

    <!-- PANTALLA REGISTRO-->
    <string name="password_registro">Contraseña</string>
    <string name="email_registro">Correo electrónico</string>
    <string name="name">Nombre</string>
    <string name="login_boton_string">LOGIN</string>
    <string name="registro_boton_String">REGISTRO</string>


    <!-- PANTALLA MENU-->
    <string name="boton_cerrar_sesion_menu">CERRAR SESIÓN</string>

    <string name="cantidad_topos">--</string>
    <string name="topos_puntuacion_jugaor">TOPOS APLASTADOS :</string>
    <string name="menu_titulo">MENÚ</string>
    <string name="userID">--</string>
    <string name="correoElectronico_menu">--</string>
    <string name="nombreUsuario_menu">--</string>

    <string name="boton_jugar_menu">JUGAR</string>
    <string name="puntuaciones_jugadores">Clasifiaciones</string>
    <string name="editar_perfil">EDITAR PERFIL</string>


    <!-- PANTALLA ESCENARIO-->
    <string name="contadorEscenario">0</string>
    <string name="nombreJugadorEscenario">------</string>
    <string name="tiempoEscenario">0</string>
    <string name="game_over">GAME OVER</string>
    <string name="topos_aplastados">TOPOS APLASTADOS:</string>
    <string name="time_out">SE ACABÓ EL TIEMPO</string>
    <string name="nombreCardScreen">Nombre</string>
    <string name="correoCardScreen">Correo</string>
    <string name="puntuacionCardScreen">puntuacion</string>
    <string name="clasifiaciones_game_over">CLASIFIACIONES</string>


</resources>