<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#1FB0FE"
   >


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1FB0FE"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenPlayerCard"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/player_image"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1FB0FE"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/nombreJugadorCardScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monocoque_demo"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nombreCardScreen"
                android:textColor="#000000"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/puntuacionJugadorCardScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monocoque_demo"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/puntuacionCardScreen"
                android:textColor="#FFBE0B"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/correoJugadorCardScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/monocoque_demo"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/correoCardScreen"
                android:textColor="#000000"
                android:textSize="15sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>