<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuClass"
    android:background="#1FB0FE"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/cantidadTopos"
        app:layout_constraintTop_toBottomOf="@+id/puntuacionJugadorActual"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/trophy_animation" />

    <TextView
        android:id="@+id/puntuacionJugadorActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="39dp"
        android:fontFamily="@font/monocoque_demo"
        android:text="@string/topos_puntuacion_jugaor"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cantidadTopos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/monocoque_demo"
        android:text="@string/cantidad_topos"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toStartOf="@+id/lottieAnimationView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/puntuacionJugadorActual" />

    <TextView
        android:id="@+id/userID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/monocoque_demo"
        android:text="--"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoJugadorMenu" />

    <TextView
        android:id="@+id/correoJugadorMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/monocoque_demo"
        android:text="--"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreJugadorMenu" />

    <TextView
        android:id="@+id/nombreJugadorMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="35dp"
        android:fontFamily="@font/monocoque_demo"
        android:text="--"
        android:textAlignment="center"
        android:textColor="#FFBE0B"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="215dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/botonJugarMenu"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:backgroundTintMode="src_in"
            android:fontFamily="@font/monocoque_demo"
            android:text="@string/boton_jugar_menu"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="12dp"
            app:iconTint="#000000"
            app:strokeColor="#FFBE0B"
            app:strokeWidth="3dp" />

        <Button
            android:id="@+id/clasifiacionJugadoresPuntuacion"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="#FFFFFF"
            android:backgroundTintMode="src_in"
            android:fontFamily="@font/monocoque_demo"
            android:text="@string/puntuaciones_jugadores"
            android:textColor="#000000"
            android:textSize="20sp"
            app:cornerRadius="12dp"
            app:iconTint="#000000"
            app:strokeColor="#FFBE0B"
            app:strokeWidth="3dp" />


        <!-- BOTON CERRAR SESIÓN -->
        <Button
            android:id="@+id/boton_cerrar_sesion_menu"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#F04646"
            android:text="@string/boton_cerrar_sesion_menu"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="149dp"
        android:layout_height="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lottieAnimationView3"
        app:layout_constraintTop_toBottomOf="@+id/puntuacionJugadorActual"
        app:srcCompat="@drawable/topo_golpeado3" />


</androidx.constraintlayout.widget.ConstraintLayout>