<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_juego"
    tools:context=".MapaJuegoClass">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- MARCADOR -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical|center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical">


                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/martilloescenariojugador" />

                <TextView
                    android:id="@+id/contadorToposEscenario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monocoque_demo"
                    android:gravity="center_vertical"
                    android:text="@string/contadorEscenario"
                    android:textColor="#000000"
                    android:textSize="30sp" />


            </LinearLayout>


            <TextView
                android:id="@+id/nombreJugadorEscenario"
                android:layout_width="145dp"
                android:layout_height="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/monocoque_demo"
                android:gravity="center|center_vertical"
                android:text="@string/nombreJugadorEscenario"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical">


                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/timeescenario" />

                <TextView
                    android:id="@+id/tiempoEscenario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monocoque_demo"
                    android:gravity="center_vertical"
                    android:text="@string/tiempoEscenario"
                    android:textColor="#000000"
                    android:textSize="30sp" />


            </LinearLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/topoescenario"
                android:layout_width="172dp"
                android:layout_height="170dp"
                android:src="@drawable/topo_normal"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</RelativeLayout>